syntax = "proto3";

package common;

message EmptyResponse{
    int32 status = 1;
}

message PageOptions{
    int32 limit = 1;
    int32 offset = 2;
    optional string sort = 3;
}
message HealthCheckData {
    string dbConnection = 1;
}
message HealthCheckResponse{
    int32 status = 2;
    HealthCheckData data = 3;
}